@@ -43,6 +43,7 @@ public class LGResources {
 
         public static final String POINT_XY = RESOURCES.getLocalizedString( "point.xy" );
         public static final String POINT_UNKNOWN = RESOURCES.getLocalizedString( "point.unknown" );
+        public static final String POINTS_AWARDED = RESOURCES.getLocalizedString( "pointsAwarded" );
     }
 
     public static class Images {
